--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "SENDGRID_API_KEY": "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",
+  "SENDGRID_FROM": "vladimir.mate@gmail.com",
+  "SENDGRID_NOMBRE": "Vladimir Mate",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
